load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "chaos",
    srcs = [
        "chaos.go",
        "pod.go",
        "tasks.go",
    ],
    importpath = "github.com/jacobbrewer1/kubechaos/pkg/chaos",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/logging",
        "@com_github_jacobbrewer1_web//:web",
        "@com_github_jacobbrewer1_web//logging",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/labels",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//listers/core/v1:core",
    ],
)

go_test(
    name = "chaos_test",
    srcs = [
        "chaos_test.go",
        "pod_test.go",
    ],
    embed = [":chaos"],
    deps = [
        "@com_github_stretchr_testify//require",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//informers",
        "@io_k8s_client_go//kubernetes/fake",
    ],
)
